<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/Reporte_Ventas_Entre_Fecha_EditText_FechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:ems="9"
            android:hint="@string/busqueda_fecha_inicial"
            android:inputType="date" >
        </EditText>

        <ImageButton
            android:id="@+id/Reporte_Ventas_Entre_Fecha_Button_FechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_menu_month" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/Reporte_Ventas_Entre_Fecha_EditText_FechaFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:ems="9"
            android:hint="@string/busqueda_fecha_final"
            android:inputType="date" >
        </EditText>

        <ImageButton
            android:id="@+id/Reporte_Ventas_Entre_Fecha_Button_FechaFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:contentDescription="@string/app_name"
            android:src="@android:drawable/ic_menu_month" />
    </LinearLayout>

    <Button
        android:id="@+id/Reporte_Ventas_Entre_Fecha_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/reporte_button"
        android:textColor="@android:color/white" />



</LinearLayout>