<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <ImageView
        android:id="@+id/Detalle_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/campamento" />

    <TextView
        android:id="@+id/Detalle_Calificacion_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/detalle_calificacion_valor"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_view_size_xlarge"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/Detalle_RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin" />

    <Button
        android:id="@+id/Detalle_Button_Calificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_green"
        android:text="@string/detalle_button_calificar"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/Detalle_Facebook_ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/reservar_exito_button_facebook" />

</LinearLayout>